crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-3.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-3 = """val\U0000000"""
  |                            ^
invalid unicode 8-digit hex code
